# informatica1exams

./: .gitignore
20130402B - Forza4/: 20130204 - TurnoB_A.docx  CMakeLists.txt  in.txt  in2.txt  in3.txt  main.c  main2.c
20140707C - ParolaInTesto/: 20140707 - C.docx  CMakeLists.txt  main.c  main2.c  sentence.txt  text.txt
20140707D - AzioniBorsaVHT/: 20140707 - D.docx  CMakeLists.txt  dati.txt  main.c
20160204C - Scacchi/: 2016-02-04-Turno-C1-final.docx  20160204C  CMakeLists.txt  main.c  nofunct  nofunct.c  partiteA.txt  partiteB.txt  partiteC.txt  partiteD.txt
20160204D - StatisticheTesto/: CMakeLists.txt  main.c  testo.txt
20160616B - Avengers/: 2016-06-16-Turno-B1-soluzione.c  20160616B  20160616B.c  CMakeLists.txt  nofun  nofunct.c  segovia.txt  squillero
20160906A - Convoluzione/: CMakeLists.txt  immagine.txt  kernel.txt  main.c  snippet.txt
20170203C - ControlliMotore/: CMakeLists.txt  main.c
20170217A - MatriciStatistica/: CMakeLists.txt  main.c  mat.txt  matr.txt  v2.c
20170302C - Libreria/: CMakeLists.txt  libri.txt  main.c
structExample/: CMakeLists.txt  main.c
